XP-727 Image Cropping - Fixup inline wizard modal effect * Show border around viewport instead of canvas in edit mode

--- a/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
+++ b/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
@@ -45,9 +45,13 @@
   }
 
   &.selected, &.edit-mode {
-    .image-canvas {
+    .image-frame {
       border: 1px solid @admin-input-blue;
       .box-shadow(0px 0px 10px darken(@admin-input-blue, 10%));
+      .image-canvas {
+        border: none;
+        box-shadow: none;
+      }
     }
   }
 
